--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NomeJogo - Home</title>
+    <title>ProbabilPonto</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/style.css">
@@ -11,7 +11,7 @@
 <body>
     <main class="container">
         <section class="containerFluid">
-            <h3 class="titleGame">Nome do Jogo</h3>
+            <h3 class="titleGame2">ProbabilPonto</h3>
             <button class="btnPlay" onclick="playGame()">Jogar</button>
         </section> 
     </main>
