--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <main class="container">
         <section class="containerFluid">
             <h3 class="titleGame2">ProbabilPonto</h3>
-            <button class="btnPlay" onclick="playGame()">Jogar</button>
+            <button class="btnPlay" onclick="playGame()">
+                Jogar
+                <i class="fa-solid fa-gamepad fa-lg"></i>
+            </button>
         </section> 
     </main>
     <script src="assets/js/index.js"></script>
