--- a/home.html
+++ b/home.html
@@ -1,5 +1,12 @@
 <h3 class="titleGame">Quantos jogadores?</h3>
 <div class="box">
+   <div class="boxPlayer" onclick="players(1)">
+    <h3 class="playerTitle">1 Jogadores</h3>
+    <div class="icons">
+      <i class="fa-solid fa-user fa-lg"></i>
+    </div>
+  </div>
+  
   <div class="boxPlayer" onclick="players(2)">
     <h3 class="playerTitle">2 Jogadores</h3>
     <div class="icons">
