--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <h3 class="titleGame">Quantos jogadores?</h3>
 <div class="box">
    <div class="boxPlayer" onclick="players(1)">
-    <h3 class="playerTitle">1 Jogadores</h3>
+    <h3 class="playerTitle">1 Jogador</h3>
     <div class="icons">
       <i class="fa-solid fa-user fa-lg"></i>
     </div>
