--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <h3 class="titleGame">Quantos jogadores?</h3>
-<div class="box">
+<div class="box" style="text-align:center;">
    <div class="boxPlayer" onclick="players(1)">
     <h3 class="playerTitle">1 Jogador</h3>
     <div class="icons">
